<resources>
    <string name="app_name">List</string>

    <string name="delete_item">Delete item</string>
    <string name="edit_item">Edit item</string>
    <string name="sort_by_alpha">Sort by alpha</string>
    <string name="sort_by_color">Sort by color</string>
    <string name="add_item">Add item</string>
    <string name="save">Save</string>
    <string name="icon_image">Icon image</string>
    <string name="icon_menu">Icon menu</string>
    <string name="icon_camera">Icon camera</string>
    <string name="delete_picture">Delete picture</string>
    <string name="cancel">Cancel</string>
    <string name="could_not_save_item">Could not save item</string>
    <string name="enter_item">Enter item…</string>
    <string name="marking">Marking</string>
    <string name="item_cant_empty">The Item can not be empty.</string>
    <string name="flash_icon">Flash icon</string>
    <string name="camera_switch_icon">Camera switch icon</string>
    <string name="error_has_occurred">An error has occurred</string>
    <string name="show_items">Show items:</string>
    <string name="without_image">without image</string>
    <string name="with_image">with image</string>
    <string name="really_delete_item">Do you really want to delete the item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>