package com.ipcoding.colorfulshoppinglist.core.util

object TestTags {

    const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
    const val NOTE_ITEM_WITH_IMAGE = "NOTE_ITEM_WITH_IMAGE"
    const val NOTE_ITEM_WITHOUT_IMAGE = "NOTE_ITEM_WITHOUT_IMAGE"
}